Added support for K/Q/Z lines and some other tweaks
git-svn-id: svn://svn.devux.org/rubircd/trunk@62 ee5ec8d9-9059-491c-9dba-d8e79e715dbe